traces/bug_165.txt
examples++-mpi/parms_FreeFem.cpp:135: error: NULL_DEREFERENCE
  pointer `ipar` last assigned on line 121 could be null and is dereferenced at line 135, column 7.
Showing all 6 steps of the trace


examples++-mpi/parms_FreeFem.cpp:119:10: start of procedure parm_param
117.   	
118.   
119.   	public: parm_param(){
                ^
120.   		PARMS_malloc(prepar,1,_PrePar);
121.   		PARMS_malloc(ipar,1,_IterPar);  

examples++-mpi/parms_FreeFem.cpp:120:3: 
118.   
119.   	public: parm_param(){
120. > 		PARMS_malloc(prepar,1,_PrePar);
121.   		PARMS_malloc(ipar,1,_IterPar);  
122.   		/*----------------------------------------------------------------------  *

examples++-mpi/parms_FreeFem.cpp:121:3: 
119.   	public: parm_param(){
120.   		PARMS_malloc(prepar,1,_PrePar);
121. > 		PARMS_malloc(ipar,1,_IterPar);  
122.   		/*----------------------------------------------------------------------  *
123.   		 * This function  sets some default  parameters just to get  started with *

examples++-mpi/parms_FreeFem.cpp:134:10: 
132.   		  int i; 
133.   		/*------------------------------------------------------------------------*/
134. > 		  for (i=1; i<18; i++)
135.   		    ipar->ipar[i] = 0;
136.   		/* parameters to be set for the solver -- not all of these are used --  

examples++-mpi/parms_FreeFem.cpp:134:15: Loop condition is true. Entering loop body
132.   		  int i; 
133.   		/*------------------------------------------------------------------------*/
134.   		  for (i=1; i<18; i++)
                     ^
135.   		    ipar->ipar[i] = 0;
136.   		/* parameters to be set for the solver -- not all of these are used --  

examples++-mpi/parms_FreeFem.cpp:135:7: 
133.   		/*------------------------------------------------------------------------*/
134.   		  for (i=1; i<18; i++)
135. > 		    ipar->ipar[i] = 0;
136.   		/* parameters to be set for the solver -- not all of these are used --  
137.   		     depending on the method selected -                                   */
